# gazelle-dependcy-resolve-demo

./: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  repo.bzl
cacheproject/: BUILD.bazel  main.go
cmd/: BUILD.bazel
go/: def.bzl  repositories.bzl  third_party_repositories.bzl
helloproject/: BUILD.bazel  main.go
helloproject/hello/: BUILD.bazel  hello.go  hello_test.go
ops/: test.sh
testproject/: BUILD.bazel  main.go
tools/: bazel  def.bzl  repositories.bzl
