load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "bazeldemo/helloproject",
    visibility = ["//visibility:private"],
    deps = ["//helloproject/hello:go_default_library"],
)

go_binary(
    name = "helloproject",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
