load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "demo/testproject",
    visibility = ["//visibility:private"],
    deps = ["@io_opencensus_go_contrib_exporter_stackdriver//:go_default_library"],
)

go_binary(
    name = "testproject",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
